# Sophus

./: CMakeLists.txt  Sophus.code-workspace
cmake/Hunter/: config.cmake
cpp/sophus/calculus/: num_diff.h
cpp/sophus/common/: concept_utils.h
cpp/sophus/geometry/: CMakeLists.txt
cpp/sophus/lie/: CMakeLists.txt  so2.h  so3.h  so3_test.cpp
cpp/sophus/lie/experimental/: CMakeLists.txt  isometry3.h  lie_group.h  lie_group_concept.h  lie_group_concept_test.cpp  lie_group_test.cpp
cpp/sophus/lie/experimental/impl/: complex.h  foo.h  identity.h  quaternion.h  rotation2.h  rotation3.h  scaling.h  semi_direct_product.h  spiral_similarity2.h
cpp/sophus/linalg/: CMakeLists.txt  homogeneous.h  skew_symmetric.h
